Edited readme and enhanced timelog system